# django-artist-management

./: README.md  db.sqlite3  pyproject.toml
api/: models.py
api/core/: pagination.py
api/migrations/: 0001_initial.py  0002_artist_music.py  0003_alter_music_artist_alter_artist_table_and_more.py  0004_alter_userprofile_table.py
api/serializers/artist/: artistSerializer.py  artistWithMusic.py  index.py
api/serializers/music/: musicSerializer.py
api/serializers/users/: userCreateSerializer.py  userRetriveSerializer.py  userUpdateSerializer.py
api/views/artist/: artistCreateView.py  artistListView.py  artistRetrieveUpdateDestroyView.py  create.py  list.py  retriveUpdateDestroy.py  retriveWithMusic.py  retriveWithMusicView.py
api/views/music/: musicCreateView.py  musicRetrieveUpdateDestroyView.py
api/views/users/: userCreateView.py  userDetailView.py  userListView.py  userUpdateView.py
artist/: artist create.bru  artist delete.bru  artist detail.bru  artist list.bru  artist update.bru  artist with music.bru  bruno.json
artist-bruno/: bruno.json
artist-bruno/artist/: artist create.bru  artist delete.bru  artist detail.bru  artist list.bru  artist update.bru  artist with music.bru
artist-bruno/auth/: login.bru
artist-bruno/music/: music create.bru  music delete.bru  music detail.bru  music edit.bru
artist-bruno/user/: register.bru  user detail.bru  user edit.bru  user list.bru
config/: settings.py  urls.py
